# co2

./: CMakeLists.txt  README.md  SCD4x.c  SCD4x.h  SSD1306.c  SSD1306.h  VCC.c  VCC.h  avr-mem.sh  beep.c  beep.h  button.c  button.h  i2cmaster.S  i2cmaster.h  main.c  main.h  menu.c  menu.h  splash.h  timer.c  timer.h
.github/workflows/: cmake-avr.yml
case/: co2 Sensor Case - Body.stl  co2 Sensor Case - Cover.stl
